# cpp_white_belt

./: .gitignore  .gitmodules  Anagrams (week 2).cpp  Bus stops-1 (map, week 2).cpp  CMakeLists.txt  ExamplesRAII.cpp  Exceptions (week 4).cpp  First name and surname (classes, week 3).cpp  GetFullName - 2 v1.0 (classes, week 3).cpp  GetFullName -1 (classes, week 3).cpp  GetFullName-2 (classes, week 3).cpp  Iterators task v1.0.cpp  Iterators task v2.0.cpp  Iterators task v3.0 - changing list to std--pair list.cpp  LICENSE.md  Maps v1.0 (week 2).cpp  Maps v2.0 (week 2).cpp  Maps v3.0 (week 2).cpp  Maps v4.0 (week 2).cpp  Quiz.cpp  Quiz_1.cpp  Quiz_2.cpp  README.md  Sinonyms (set, week 2).cpp  Sorted strings (classes, week 3).cpp  Sorting chars via to lower (week 3).cpp  Sorting nums via abs() (week 3).cpp  String (constructors, week 3).cpp  Structures (date, week 4).cpp  Text files (streams, week 4).cpp  Text files 1 (streams, week 4).cpp  class_Function(week 4).cpp  main.cpp  operators (overload, week 4).cpp  tests.cpp
