cmake_minimum_required(VERSION 3.17)
project(cpp_white_belt)

set(CMAKE_CXX_STANDARD 17)

add_executable(cpp_white_belt main.cpp "Sorting chars via to lower (week 3).cpp" "Sorting nums via abs() (week 3).cpp" "Sorted strings (classes, week 3).cpp" "First name and surname (classes, week 3).cpp" "Iterators task v3.0 - changing list to std--pair list.cpp" "Iterators task v2.0.cpp" "Iterators task v1.0.cpp" "Anagrams (week 2).cpp" "Maps v4.0 (week 2).cpp" "Maps v3.0 (week 2).cpp" "Maps v2.0 (week 2).cpp" "Maps v1.0 (week 2).cpp")